# PowerEstimator

./: .gitignore  LICENSE  README.md  setup.py
power_spectrum_estimator_py/: __init__.py  _dft_density_k.py  _dft_density_k.pyx  _pk_estimator.py  power_spectrum_estimator.py  pyproject.toml
power_spectrum_estimator_py/assignment/: _cic.pyx  _mass_assign.py  _ngp.pyx  _tsc.pyx
test/: test.py
test/fakedata_1.0000/1/Position/: 000000:Zone.Identifier
